Opened 10 years ago
Closed 10 years ago
#11787 closed bug (fixed)
[Appearance] Antialiasing "Revert" button doesn't work properly
Reported by: | Janus | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Appearance | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The Antialiasing "Revert" button behave more like a "Undo" button.
Attachments (1)
Change History (4)
by , 10 years ago
Attachment: | 0001-Fix-11787.-Antialiasing-Revert-button-works-as-expec.patch added |
---|
comment:1 by , 10 years ago
patch: | 0 → 1 |
---|
comment:2 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Patch applied in hrev48930. Thanks!