Preferences: Make "Antialiasing" Revert button work as expected.

Fixes #11787.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>